--- a/docs/exercises/01.collaborate/03.md
+++ b/docs/exercises/01.collaborate/03.md
@@ -31,9 +31,9 @@ The first step is to create a new integration check for the our app.
 
 ### Add Code Quality Checks
 
-1. Create a new branch with name `contiuous-integration-deployment` using the following commands
-    - `git branch contiuous-integration-deployment`
-    - `git checkout contiuous-integration-deployment`
+1. Create a new branch with name `continuous-integration-deployment` using the following commands
+    - `git branch continuous-integration-deployment`
+    - `git checkout continuous-integration-deployment`
 2. Navigate to `.github/workflows` and create a new file with the name `01.continuous.integration.yml`.
 3. Copy and paste the provided YAML code for running quality checks, UI tests, and security checks.
 
@@ -76,7 +76,7 @@ The first step is to create a new integration check for the our app.
 4. Save the file and commit it to your repository using the following commands
     - add the new files: `git add .`
     - commit the changes: `git commit -m "add code quality checks"`
-    - push the changes to github: `git push --set-upstream origin contiuous-integration-deployment`
+    - push the changes to github: `git push --set-upstream origin continuous-integration-deployment`
 5. Go back to your github repo and create a pull request
 
     | - Create pull request |
@@ -135,8 +135,8 @@ The first step is to create a new integration check for the our app.
 4. Save the file and commit it to your repository using the following commands
     - add the new files: `git add .`
     - commit the changes: `git commit -m "add ui tests"`
-    - push the changes to github: `git push --set-upstream origin contiuous-integration-deployment`
-5. Navgiate back to our pull request and click on the `checks` tab to see the status of our checks.
+    - push the changes to github: `git push --set-upstream origin continuous-integration-deployment`
+5. Navigate back to our pull request and click on the `checks` tab to see the status of our checks.
 
     | - Checks |
     | -- |
