--- a/docs/exercises/02.secure.the.software.supply.chain/02.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/02.md
@@ -1,13 +1,13 @@
 # :test_tube: Build and Upload Application Artifact
 
-In this step we will build the application and upload the artifact to GitHub Packages once the pre-relase tag is created on step [Create Tag Step](./01.md).
+In this step we will build the application and upload the artifact to GitHub Packages once the release tag is created on step [Create Tag Step](./01.md).
 
 - _**Objective:**_ Build the application and upload the artifact to GitHub Packages.
 - _**Estimated completion time:**_ 5 minutes
 - _**Outcome:**_ The application will be built and uploaded to GitHub Packages.
 
 !!! note
-      We will continue working on the same branch `contiuous-integration-deployment`.
+      We will continue working on the same branch `continuous-integration-deployment`.
 
 ## Prerequisites
 
@@ -22,7 +22,7 @@ In this step we will build the application and upload the artifact to GitHub Pac
 ## :pencil: Lab
 
 !!! note
-      This step requires the previous step [Create Tag Step](./01.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](./04.md).
+      This step requires the previous step [Create Tag Step](./01.md) to be completed first and the release tag is created and merging the pull request to main branch on step [Merge Pull Request Step](./04.md).
 
 - Navigate to `.github/workflows` and create a new file with name `02.2.continuous.delivery.yml`.
 - Add the following content to the file `02.2.continuous.delivery.yml`:
