--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -1,13 +1,13 @@
-# :test_tube: Deploye the application to GitHub Pages
+# :test_tube: Deploy the application to GitHub Pages
 
-In this step once we clarify the application is ready to be deployed to pre-relase we will create a new release deployment.
+In this step once we clarify the application is ready to be deployed to release we will create a new release deployment.
 
 - _**Objective:**_ Create a new release deployment.
 - _**Estimated completion time:**_ 5 minutes
 - _**Outcome:**_ A production release will be created.
 
 !!! note
-    We will continue working on the same branch `contiuous-integration-deployment`.
+We will continue working on the same branch `continuous-integration-deployment`.
 
 ## Prerequisites
 
@@ -21,22 +21,22 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 ## :pencil: Lab
 
 !!! note
-    This step requires the previous step [Create pre-release Step](../02.md) to be completed first and the pre-realse tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
+This step requires the previous step [Create release Step](../02.md) to be completed first and the release tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
 
-1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
-2. Add the following content to the file:
-!!! example "Deploy Release"
+1.  Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
+2.  Add the following content to the file:
+    !!! example "Deploy Release"
 
-      ```yaml
-      --8<-- "docs/exercises/03.automate.release/workflows/01.continuous-deployment.yml"
-      ```
+          ```yaml
+          --8<-- "docs/exercises/03.automate.release/workflows/01.continuous-deployment.yml"
+          ```
 
 !!! example "Push changes to Github"
-       ``` bash
+`bash
        git add .
        git commit -m "feat: update continuous integration workflow - add security checks step"
        git push origin continuous-integration-deployment
-       ```
+      `
 
 ---
 
@@ -45,7 +45,7 @@ In this step once we clarify the application is ready to be deployed to pre-rela
 In this module we have created:
 
 1. Enable Security Features and checks on [Step](../02.secure.the.software.supply.chain/00.md).
-2. Create a new pre-release tag on [Step](../02.secure.the.software.supply.chain/01.md).
+2. Create a new release tag on [Step](../02.secure.the.software.supply.chain/01.md).
 3. Build and Upload Application Artifact on [Step](../02.secure.the.software.supply.chain/02.md).
 4. Container Image Packaging on [Step](../02.secure.the.software.supply.chain/02-extra.md).
 5. Create a new release deployment on [Step](../02.secure.the.software.supply.chain/03.md).
