fix all notes and yaml code

--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -30,7 +30,9 @@ In this part we will get our application ready for deployment and deploy it to G
 !!! note
     We will keep working on the same branch `continuous-integration-deployment`.
 
+
 #### Step 1: Get the last version number
+
 
 1. Navigate to `.github/workflows` and create a new file called `02.1.continuous.delivery.yml`.
 2. Add the following content to the file:
@@ -51,37 +53,41 @@ In this part we will get our application ready for deployment and deploy it to G
 
 #### Step 2: Get next version number
 
-1.  Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
-2.  On line `24` add the following content:
+1. Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
+2. On line `24` add the following content:
+
     !!! example "Get Next Version Number"
 
           ```yaml
           --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment-part-2.yml"
           ```
 
-!!! example "Push changes to Github"
-`bash
-       git add .
-       git commit -m "feat: update continuous integration workflow - add continuous-deployment part 2"
-       git push origin continuous-integration-deployment
-      `
+    !!! example "Push changes to Github"
+
+          ```bash
+          git add .
+          git commit -m "feat: update continuous integration workflow - add continuous-deployment part 2"
+          git push origin continuous-integration-deployment
+          ```
 
 #### Step 3: Create tag for the next version for release
 
-1.  Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
-2.  Add the following content to the file after line `38`:
+1. Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
+2. Add the following content to the file after line `38`:
+
     !!! example "Create release tag"
 
           ```yaml
           --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-deployment-part-3.yml"
           ```
 
-!!! example "Push changes to Github"
-`bash
-       git add .
-       git commit -m "feat: update continuous integration workflow - add continuous-deployment part 3"
-       git push origin continuous-integration-deployment
-      `
+    !!! example "Push changes to Github"
+
+          ```bash
+          git add .
+          git commit -m "feat: update continuous integration workflow - add continuous-deployment part 3"
+          git push origin continuous-integration-deployment
+          ```
 
 ---
 
