--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -21,22 +21,24 @@ We will continue working on the same branch `continuous-integration-deployment`.
 ## :pencil: Lab
 
 !!! note
-This step requires the previous step [Create release Step](../02.md) to be completed first and the release tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
+      This step requires the previous step [Create release Step](../02.md) to be completed first and the release tag is created and merging the pull request to main branch on step [Merge Pull Request Step](../04.md).
 
-1.  Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
-2.  Add the following content to the file:
+1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
+2. Add the following content to the file:
+
     !!! example "Deploy Release"
 
           ```yaml
           --8<-- "docs/exercises/03.automate.release/workflows/01.continuous-deployment.yml"
           ```
 
-!!! example "Push changes to Github"
-`bash
-       git add .
-       git commit -m "feat: update continuous integration workflow - add security checks step"
-       git push origin continuous-integration-deployment
-      `
+    !!! example "Push changes to Github"
+
+          ```bash
+          git add .
+          git commit -m "feat: update continuous integration workflow - add security checks step"
+          git push origin continuous-integration-deployment
+          ```
 
 ---
 
