--- a/docs/exercises/01.collaborate/01.md
+++ b/docs/exercises/01.collaborate/01.md
@@ -1,22 +1,29 @@
 # :test_tube: Project Management
 
-!!! quote ":moneybag: Facilitate tracking of business goal delivery"
+!!! quote ":octicons-project-16: Facilitate tracking of business goal delivery"
 
-    > _Our goal is to create a **Tetris Game** to delight our site visitors._
+    > _Our goal is to create a **Tetris Game** to delight our site visitors, with stakeholders in the loop through the full course of the development process._
 
     1. Refer back to the project created in the [prerequisite to the workshop](../../prerequisites.md#create-a-project-board-for-the-repository)
 
-    2. Create an issue to capture the goal
+    2. Create an issue (1) to capture the goal
+    { .annotate }
 
-          1. Select the **:octicons-project-16: Home** view
-          2. Click on the **+** button
-          3. Select **:octicons-issue-opened-16: Create new issue** from the drop down
-          4. Choose **Feature request**
-          5. Fill the form as follows and click <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Create</span>
+          1. 👀 See [Project planning for developers](https://github.com/features/issues)
+
+          <!-- end annotation -->
+
+          1. Select the **:octicons-project-16: Backlog** view
+          2. Click on the **+ Add item**
+          3. Click on the **+** button
+          4. Select **:octicons-issue-opened-16: Create new issue** from the menu
+          5. Choose the repository you created earlier
+          6. Choose **Feature request**
+          7. Fill the form as follows and click <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Create</span>
 
           ![Create issue](../../assets/img/create-issue.png)
 
     You may now update the issue with comments to keep collaborating stakeholders in the loop.
-    
+
     ## 📚 Resources
     - [Project planning for developers](https://github.com/features/issues)
