--- a/docs/exercises/01.collaborate/01.md
+++ b/docs/exercises/01.collaborate/01.md
@@ -18,8 +18,23 @@
           3. Click on the **+** button
           4. Select **:octicons-issue-opened-16: Create new issue** from the menu
           5. Choose the repository you created earlier
-          6. Choose **Feature request**
-          7. Fill the form as follows and click <span style="background-color: green; font-weight: bold; padding: 0.25em 0.75em; border-radius: 0.5em">Create</span>
+          6. Choose **Feature request** (1)
+             { .annotate }
+
+             1. The issue creation was facilitated with an 👀 [**issue template**](https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/about-issue-and-pull-request-templates#issue-templates).
+
+                ```markdown title=".github/ISSUE_TEMPLATE/feature_request.md"
+                --8<-- ".github/ISSUE_TEMPLATE/feature_request.md"
+                ```
+
+          7. Fill the form as follows or feel free to be creative 🙂 with your inputs.
+
+             After filling the form, click <span class="gh-button-green">Create :material-apple-keyboard-command::material-keyboard-return:</span> to create the issue. (1)
+             { .annotate }
+
+             1. Things you can do in an issue include but are not limited to
+                - [**Assign**](https://docs.github.com/en/issues/tracking-your-work-with-issues/assigning-issues-and-pull-requests-to-other-github-users) the issue to yourself or other stakeholders.
+                - [**Mention**](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#mentioning-people-and-teams) other stakeholders (people and teams) to notify them for awareness.
 
           ![Create issue](../../assets/img/create-issue.png)
 
@@ -27,3 +42,4 @@
 
     ## 📚 Resources
     - [Project planning for developers](https://github.com/features/issues)
+    - [Planning and tracking work for your team or project](https://docs.github.com/en/issues/tracking-your-work-with-issues/planning-and-tracking-work-for-your-team-or-project)
