--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -2,7 +2,8 @@
 
 !!! quote ":moneybag: Enable rapid onboarding to project development"
 
-    > _Our goal is to create a **Tetris Game** to delight our site visitors._
+    > _Our goal is to create a **Tetris Game** to delight our site visitors, without losing time to complex project onboarding process nor complications due to tool-bloat._
+    >
     >
     > However, navigating to the **Tetris Game** page of the site shows that the feature is currently missing.
     > ![Tetris Game is missing](../../assets/img/missing-tetris-game.jpeg)
@@ -10,16 +11,16 @@
     ## Exercise: Integrate the Tetris Game
 
     1. Refer back to the Codespaces development environment created in the [prerequisite to the workshop](../../prerequisites.md#provision-a-new-cloud-development-environment-for-the-workshop).
-    1. On the `TERMINAL` view at the bottom, notice that a local site server is already running.
-    1. Looking at the build log in the terminal, you can also see the following warning
+    2. On the `TERMINAL` view at the bottom, notice that a local site server is already running.
+    3. Looking at the build log in the terminal, you can also see the following warning
 
         ![site build warning](../../assets/img/build-warning.png)
-    1. On the `PORTS` view at the bottom, notice there is a `Site (8080)` entry in the table. You may right click on the entry to make the port public.
+    4. On the `PORTS` view at the bottom, notice there is a `Site (8080)` entry in the table. You may right click on the entry to make the port public.
 
         This way other stakeholders can have live access to your ongoing work and can collaborate with timely feedbacks.
-    1. Click the **:octicons-globe-16:** icon associated with `Site (8080)` entry to view the site in your browser
-    1. Rename the `docs/.tetris.game` folder to `docs/tetris.game` without the `.` prefix
-    1. Find and open the file `mkdocs.yml` in the File Explorer (it's at the root of the file tree)
+    5. Click the **:octicons-globe-16:** icon associated with `Site (8080)` entry to view the site in your browser
+    6. Rename the `docs/.tetris.game` folder to `docs/tetris.game` without the `.` prefix
+    7. Find and open the file `mkdocs.yml` in the File Explorer (it's at the root of the file tree)
 
           - Fix the  the Tetris Game relevant entry and point the value of the entry to the `tetris.game` folder
 
@@ -49,8 +50,8 @@
 
             1.  Here, change `.tetris.game/index.html` to `tetris.game/index.html`.
 
-    1. Observe the local build in the terminal and do a manual test of the integration
-    1. Add automated checks by creating the following workflows
+    8. Observe the local build in the terminal and do a manual test of the integration
+    9. Add automated checks by creating the following workflows
 
         ```yaml title=".github/workflows/1.1.continuous.integration.yml"
         --8<-- ".github.reference/workflows/1.1.continuous.integration.yml"
@@ -59,7 +60,7 @@
         ```yaml title=".github/workflows/1.2.continuous.integration.yml"
         --8<-- ".github.reference/workflows/1.2.continuous.integration.yml"
         ```
-    1. Commit the changes to a new branch and push it
+    10. Commit the changes to a new branch and push it
 
         ```bash
         git checkout -b integrate-tetris-game
