--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -28,7 +28,7 @@ In this step once we clarify the application is ready to be deployed to release 
 
         ```bash
         git add .
-        git commit -m "feat: update continuous integration workflow - add security checks step"
+        git commit -m "feat: update continuous integration workflow - deploy app to GitHub Pages"
         git push origin continuous-deployment
         ```
 
