--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -19,15 +19,14 @@ In this part we will add to the continuous integration workflow the security che
 ### Step 1. Enable Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
 
 !!! note
-    You must have admin permissions on the repository to perform this step.
-
-!!! note
-    This part is suppose to be done in the prerequisites
+    - You must have admin permissions on the repository to perform this step.
+    - This part is suppose to be done in the prerequisites
+    - Change the indentation settings to use 2 spaces
 
 ### Step 2. Add security checks to the continuous integration workflow
 
 1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
-2. Add the following content to the file on line `68`:
+2. Add the following content to the file:
 
     !!! example "Security Checks"
 
