--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -44,7 +44,7 @@ In this part we will get our application ready for deployment and then deploy it
 #### Step 2: Get next version number
 
 1. Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
-2. On line `24` add the following content:
+2. Add the following content:
 
     !!! example "Get Next Version Number"
 
@@ -63,7 +63,7 @@ In this part we will get our application ready for deployment and then deploy it
 #### Step 3: Create tag for the next version for release
 
 1. Navigate to `.github/workflows` and open `02.1.continuous.delivery.yml`.
-2. Add the following content to the file after line `38`:
+2. Add the following content to the file:
 
     !!! example "Create release tag"
 
