--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -1,47 +1,57 @@
-# :test_tube: Deploy the application to GitHub Pages
+# :test_tube: Deploy Release
 
-In this step once we clarify the application is ready to be deployed to release we will create a new release deployment.
+## Recap
 
-- _**Objective:**_ Create a new release deployment.
-- _**Estimated completion time:**_ 5 minutes
-- _**Outcome:**_ A production release will be created.
+```mermaid
+flowchart TD
+    subgraph Checks
+        A[Code Linting]
+        B[UI Testing]
+        D[Security Scanning]
+        C[Workflow Failure]
+    end
 
-!!! note
-    We will continue working on the same branch `continuous-deployment`.
+    A-->|Pass|B
+    A-->|Fail|C
+    B-->|Pass|D
+    B-->|Fail|C
 
-## :books: Resources
+    subgraph Release Process
+        E[Build and Upload Artifact]
+        F[Draft release]
+        G[Publish Release]
+        H{Validate}
+        I[Deploy Release]
+        J[Failure Workflow]
 
-- [GitHub Actions](https://docs.github.com/en/actions)
+    end
 
-## :pencil: Lab
+    D-->|Pass|K
+    D-->|Fail|C
+    E-->|Success|F
+    F-->|Success|G
+    F-->|Fail|J
+    G-->|Valid|H
+    G-->|Invalid|J
+    H-->|Pass|I
+    H-->|Fail|J
+    E-->|Fail|J
 
-1. Navigate to `.github/workflows` and open the file `03.continuous.deployment.yml`.
-2. Add the following content to the file:
+    subgraph Main Branch
+        K[Push to Main Branch]
+    end
 
-    !!! example "Deploy Release"
+    K-->|Success|E
 
-        ```yaml
-        --8<-- "docs/exercises/03.automate.release/workflows/01.continuous-deployment.yml"
-        ```
+```
 
-    !!! example "Push changes to Github"
+## Instructions
 
-        ```bash
-        git add .
-        git commit -m "feat: update continuous integration workflow - deploy app to GitHub Pages"
-        git push origin continuous-deployment
-        ```
+In this step will merge our pull request to run the workflows we have created on the previous steps.
 
----
-
-## :star: Recap
-
-So far, we have reached the following milestones:
-
-1. Enable Security Features and checks on [Step](../02.secure.the.software.supply.chain/00.md).
-2. Create a new release tag on [Step](../02.secure.the.software.supply.chain/01.md).
-3. Build and Upload Application Artifact on [Step](../02.secure.the.software.supply.chain/02.md).
-4. Container Image Packaging on [Step](../02.secure.the.software.supply.chain/02-extra.md).
-5. Create a new release deployment.
-
-Now let's move to our final step by merging the pull request to main branch on [Step](02.md) and test all of the steps above.
+1. Navigate to the repository on GitHub and open the pull request.
+2. Click on the button `Merge pull request` and select `Confirm merge`.
+3. Navigate to the `Actions` tab and verify the workflows are running.
+4. Check the tag was created on the repository.
+5. Check the release was created on the repository.
+6. Check the release was created on the repository.
