--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -63,7 +63,7 @@
 
           - Fix the the `Tetris Game` relevant entry and point the value of the entry to the `tetris.game` folder
 
-            ```yaml linenums="153" hl_lines="21"
+            ```yaml linenums="153" hl_lines="20"
             nav:
             - index.md
             - Prerequisites: prerequisites.md
@@ -134,7 +134,7 @@
 
     2. Add automated checks by creating the following workflows
 
-        ```mermaid { .mermaid }
+        ```mermaid
         sequenceDiagram
             participant GA as GitHub Actions
 
