--- a/docs/exercises/03.automate.release/01.md
+++ b/docs/exercises/03.automate.release/01.md
@@ -1,4 +1,4 @@
-# :test_tube: Deploy Release
+# :test_tube: Review of Workshop Outcome
 
 ## Recap
 
@@ -45,13 +45,11 @@ flowchart TD
 
 ```
 
-## Instructions
+## Observations
 
-In this step will merge our pull request to run the workflows we have created on the previous steps.
+Let us observe the outcome of the exercises we have completed as a whole.
 
-1. Navigate to the repository on GitHub and open the pull request.
-2. Click on the button `Merge pull request` and select `Confirm merge`.
-3. Navigate to the `Actions` tab and verify the workflows are running.
-4. Check the tag was created on the repository.
-5. Check the release was created on the repository.
-6. Check the release was created on the repository.
+1. Navigate to the `Actions` tab and verify the workflows are running (or have completed running).
+2. Check the tag was created on the repository.
+3. Check the release was created on the repository.
+4. Check the release was created on the repository.
