re-formate the docs

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -1,45 +1,42 @@
 # :test_tube: Security Checks
 
-In this part we will add to the continuous integration workflow the security checks.
+!!! quote ":octicons-milestone-16: Add Security Checks"
 
-- _**Objective:**_ Add security checks to the continuous integration workflow.
-- _**Estimated completion time:**_ 10 minutes
-- _**Outcome:**_ The continuous integration workflow will run the security checks on the Pull Request
+    > In this part we will add to the continuous integration workflow the security checks which be run on the Pull Request open event.
 
-!!! note
-    We will continue working on the same branch `continuous-deployment` and the same file `01.1.continuous.integration.yml`.
 
-## :books: Resources
+    !!! note
+        We will continue working on the same branch `continuous-deployment` and the same file `1.1.continuous.integration.yml`.
 
-- [GitHub Actions](https://docs.github.com/en/actions)
-- [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
+    ### Step 1. Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
 
-## :pencil: Lab
+    !!! note
+        - You must have admin permissions on the repository to perform this step.
+        - This part is suppose to be done in the prerequisites
+        - Change the indentation settings to use 2 spaces
 
-### Step 1. Enable Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
+    ### Step 2. Add security checks to the continuous integration workflow
 
-!!! note
-    - You must have admin permissions on the repository to perform this step.
-    - This part is suppose to be done in the prerequisites
-    - Change the indentation settings to use 2 spaces
+    1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
+    2. Add the following content to the file:
 
-### Step 2. Add security checks to the continuous integration workflow
+        !!! example "Security Checks"
 
-1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
-2. Add the following content to the file:
+            ```yaml
+            --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml"
+            ```
 
-    !!! example "Security Checks"
+        !!! example "Push changes to Github"
 
-        ```yaml
-        --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml"
-        ```
+            ``` bash
+            git add .
+            git commit -m "feat: update continuous integration workflow - add security checks step"
+            git push origin continuous-deployment
+            ```
 
-    !!! example "Push changes to Github"
+    Navigate to the repository on GitHub and open the pull request.
 
-        ``` bash
-        git add .
-        git commit -m "feat: update continuous integration workflow - add security checks step"
-        git push origin continuous-deployment
-        ```
+    ## :books: Resources
 
-Navigate to the repository on GitHub and open the pull request.
+    - [GitHub Actions](https://docs.github.com/en/actions)
+    - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
