--- a/docs/exercises/02.secure.the.software.supply.chain/02.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/02.md
@@ -1,61 +1,34 @@
 # :test_tube: Build and Upload Application Artifact
 
-In this step we will build the application and upload the artifact to GitHub Packages once the release tag is created on step [Create Tag Step](./01.md).
+!!! quote ":octicons-milestone-16: Build and Upload Application Artifact"
 
-- _**Objective:**_ Build the application and upload the artifact to GitHub Packages.
-- _**Estimated completion time:**_ 5 minutes
-- _**Outcome:**_ The application will be built and uploaded to GitHub Packages.
+    > In this step we will build the application and upload the artifact to GitHub Packages once the release tag is created on step [Create Tag Step](./01.md).
 
-!!! note
-    We will continue working on the same branch `continuous-deployment`.
 
-## :books: Resources
+    !!! note
+        We will continue working on the same branch `continuous-deployment`.
 
-- [GitHub Packages](https://docs.github.com/en/packages/guides/about-github-container-registry)
+    1. Navigate to `.github/workflows` and create a new file with name `2.2.continuous.delivery.yml`.
+    2. On this step will build the application and upload the artifact to GitHub Packages as following:
+        1. Build and Archive Artifact
+        2. Draft The Release
+        3. Upload and Publish The Release
+    3. Add the following content to the file `2.2.continuous.delivery.yml`:
 
-## :pencil: Lab
+    !!! example "Build and Archive Artifact"
 
-- Navigate to `.github/workflows` and create a new file with name `02.2.continuous.delivery.yml`.
-- Add the following content to the file `02.2.continuous.delivery.yml`:
+        ```yaml
+        --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery.yml"
+        ```
 
-### Build and Archive Artifact
+    !!! example "Push changes to Github"
 
-!!! example "Build and Archive Artifact"
+        ``` bash
+        git add .
+        git commit -m "feat: add continuous delivery workflow for building and publishing the application"
+        git push origin continuous-deployment
+        ```
 
-    ```yaml
-    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-1.yml"
-    ```
+    ## :books: Resources
 
-### Draft The Release
-
-!!! example "Draft release"
-
-    ``` yaml
-    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-2.yml"
-    ```
-
-### Upload and Publish The Release
-
-!!! example "Upload release and Publish it"
-
-    ```yaml
-    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery-part-3.yml"
-    ```
-
-- Commit and push the changes to GitHub
-
-!!! example "Push changes to Github"
-
-    ``` bash
-    git add .
-    git commit -m "feat: add continuous delivery workflow for building and publishing the application"
-    git push origin continuous-deployment
-    ```
-
----
-
-??? example "Full Example"
-
-    ```yaml
-    --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/03.continuous.delivery.yml"
-    ```
+    - [GitHub Packages](https://docs.github.com/en/packages/guides/about-github-container-registry)
