Incorporate additional details

--- a/docs/exercises/01.collaborate/01.md
+++ b/docs/exercises/01.collaborate/01.md
@@ -1,15 +1,15 @@
 # :test_tube: Project Management
 
-!!! quote ":octicons-project-16: Facilitate tracking of business goal delivery"
+!!! quote ":octicons-project-16: Facilitate collaborative tracking of business goal delivery"
 
-    > _Our goal is to create a **Tetris Game** to delight our site visitors, with stakeholders in the loop through the full course of the development process._
+    > _As part of the prerequisite steps, you had created a project management board. You will now build on that step and keep stakeholders in the loop through the full course of the development process._
 
     1. Refer back to the project created in the [prerequisite to the workshop](../../prerequisites.md#create-a-project-board-for-the-repository)
 
     2. Create an issue (1) to capture the goal
     { .annotate }
 
-          1. 👀 See [Project planning for developers](https://github.com/features/issues)
+          1. 👀 See [Project planning for developers](https://github.com/features/issues) to learn more.
 
           <!-- end annotation -->
 
@@ -29,7 +29,7 @@
 
           7. Fill the form as follows or feel free to be creative 🙂 with your inputs.
 
-             After filling the form, click <span class="gh-button-green">Create :material-apple-keyboard-command::material-keyboard-return:</span> to create the issue. (1)
+             After filling the form, click <span class="gh-button-green">Create <span style="font-size: 0.75em">:material-apple-keyboard-command::material-keyboard-return:</span></span> to create the issue. (1)
              { .annotate }
 
              1. Things you can do in an issue include but are not limited to
