--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -6,7 +6,7 @@
 
 
     !!! note
-        We will continue working on the same branch `continuous-deployment` and the same file `1.1.continuous.integration.yml`.
+        We will continue working on the same branch `feature/tetris-game` and the same file `1.1.continuous.integration.yml`.
 
     ### Step 1. Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
 
@@ -31,7 +31,7 @@
             ``` bash
             git add .
             git commit -m "feat: update continuous integration workflow - add security checks step"
-            git push origin continuous-deployment
+            git push origin feature/tetris-game
             ```
 
     Navigate to the repository on GitHub and open the pull request.
