--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -10,7 +10,7 @@
     ### 1. Create a GitHub Action to build and publish the application
 
     !!! note
-        We will keep working on the same branch `continuous-deployment`.
+        We will keep working on the same branch `feature/tetris-game`.
 
     #### Step 1: Get the last version number
 
@@ -32,7 +32,7 @@
             ```bash
             git add .
             git commit -m "feat: update continuous integration workflow - add continuous-Delivery"
-            git push origin continuous-deployment
+            git push origin feature/tetris-game
             ```
 
     ## :books: Resources
