--- a/docs/exercises/02.secure.the.software.supply.chain/02.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/02.md
@@ -6,7 +6,7 @@
 
 
     !!! note
-        We will continue working on the same branch `continuous-deployment`.
+        We will continue working on the same branch `feature/tetris-game`.
 
     1. Navigate to `.github/workflows` and create a new file with name `2.2.continuous.delivery.yml`.
     2. On this step will build the application and upload the artifact to GitHub Packages as following:
@@ -26,7 +26,7 @@
         ``` bash
         git add .
         git commit -m "feat: add continuous delivery workflow for building and publishing the application"
-        git push origin continuous-deployment
+        git push origin feature/tetris-game
         ```
 
     ## :books: Resources
