--- a/docs/exercises/03.automate.release/00.md
+++ b/docs/exercises/03.automate.release/00.md
@@ -18,7 +18,7 @@
             ```bash
             git add .
             git commit -m "feat: update continuous integration workflow - deploy app to GitHub Pages"
-            git push origin continuous-deployment
+            git push origin feature/tetris-game
             ```
     3. Navigate to the repository on GitHub and open the pull request.
     4. Finally, click on the button `Merge pull request` and select `Confirm merge`.
