update resources for security checks

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -40,3 +40,7 @@
 
     - [GitHub Actions](https://docs.github.com/en/actions)
     - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
+    - [GitHub Advanced Security](https://docs.github.com/en/get-started/learning-about-github/about-github-advanced-security)
+    - [GitHub Advanced Security - Code scanning](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/
+    about-code-scanning)
+    - [GitHub Advanced Security - Denpendency Graph](https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-the-dependency-graph)
