--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -324,7 +324,7 @@ The `Build` step in the previously implemented automated checks should identify 
 1. Rename the **`docs/.tetris.game`** folder to **`docs/tetris.game`**, i.e. simply remove the `.` prefix from the name.
 2. Find and open the file **`mkdocs.yml`** in the File Explorer (it's at the root of the file tree)
 
-   - Fix the the `Tetris Game` relevant entry and point the value of the entry to the `tetris.game` folder
+   - Confirm that the `Tetris Game` relevant entry points to an index file in the `tetris.game` folder
 
      ```yaml linenums="153" hl_lines="20"
      nav:
@@ -346,10 +346,8 @@ The `Build` step in the previously implemented automated checks should identify 
            - Automate-Release:
                - exercises/03.automate.release/index.md
                - exercises/03.automate.release/01.md
-       - Tetris Game: tetris.game/index.html #(1)
+       - Tetris Game: tetris.game/index.html
      ```
-
-     1. Here, change `.tetris.game/index.html` to `tetris.game/index.html`.
 
 #### **Manual Test**
 
@@ -397,7 +395,7 @@ Before publishing our new changes, we will implement and execute a functional te
 
     ```bash
     # Add newly implemented and modified files
-    git add docs/tetris.game mkdocs.yml tests/tetris.spec.js
+    git add docs/tetris.game docs/.tetris.game mkdocs.yml tests/tetris.spec.js
     git commit -m "Integrate Tetris game implementation"
     git push origin
     ```
