Name created file continuous.integration.yml

--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -193,7 +193,7 @@ At this fundamentals phase of introduction to DevSecOps, we shall focus our leve
 
     To enable quality checks in the project at high velocity, implement a workflow that standardizes automated checks as follows.
 
-    ```yaml title=".github/workflows/1.1.continuous.integration.yml" linenums="1" hl_lines="47-53 55-57 59-60"
+    ```yaml title=".github/workflows/continuous.integration.yml" linenums="1" hl_lines="47-53 55-57 59-60"
     --8<-- "reference.implementations/workflows/1.1.continuous.integration.yml"
     ```
 
@@ -275,7 +275,7 @@ At this fundamentals phase of introduction to DevSecOps, we shall focus our leve
 
         ```bash
         git checkout -b feature/tetris-game
-        git add .github/workflows/1.1.continuous.integration.yml
+        git add .github/workflows/continuous.integration.yml
         # If you are doing the workshop with an enterprise account
         # and have opted to implement merge queue then you should also
         # add the merge queue workflow by uncommenting the next line.
